--- a/packages/shell/app/mapping.html
+++ b/packages/shell/app/mapping.html
@@ -10,6 +10,6 @@
   <script type="module" src="/scripts/mapping.mjs" defer></script>
 </head>
 <body>
-  
+  <ss-mapper></ss-mapper>
 </body>
 </html>
