--- a/packages/shell/app/full-screen.html
+++ b/packages/shell/app/full-screen.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <title>Lit3D Expo Shell - App</title>
+  <title>Lit3D Expo Shell - Full Screen</title>
   <link rel="stylesheet" href="/common/fonts/fonts.css" type="text/css">
   <link rel="stylesheet" href="/styles/index.css" type="text/css">
   <script type="module" src="/scripts/index.mjs" defer></script>
 </head>
 <body>
-  <ss-app></ss-app>
+  <ss-full-screen></ss-full-screen>
 </body>
 </html>
