--- a/packages/shell/app/mapping.html
+++ b/packages/shell/app/mapping.html
@@ -7,7 +7,7 @@
   <title>Lit3D Expo Shell - Mapping</title>
   <link rel="stylesheet" href="/common/fonts/fonts.css" type="text/css">
   <link rel="stylesheet" href="/styles/index.css" type="text/css">
-  <script type="module" src="/scripts/mapping.mjs" defer></script>
+  <script type="module" src="/scripts/index.mjs" defer></script>
 </head>
 <body>
   <ss-mapper></ss-mapper>
